server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__bad_queries-21.snap
---
source: src/search/search_executor/mod.rs
description: "The architects name is a N2119. There are other rooms which are actually named '2119', which means 4 is the best case."
expression: actual
info: "'2119' should get '0101.02.119' in 4 results # The architects name is a N2119. There are other rooms which are actually named '2119', which means 4 is the best case."
---
- facet: rooms
  entries:
    - id: 5101.EG.119
      type: room
      name: 5101.EG.119 (Physiklabor (einfach))
      subtext: "garching, Physik I"
      subtext_bold: 2119@5101
      parsed_id: "PH \u00192119\u0017"
    - id: 5413.01.119
      type: room
      name: 5413.01.119 (Kopierer)
      subtext: "garching, BNMRZ Bayerisches NMR-Zentrum"
      subtext_bold: 2119@5413
      parsed_id: "\u00192119\u0017 BNMRZ B…MR-Zentrum"
  n_visible: 2
  estimatedTotalHits: 2
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
