server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__bad_queries-22.snap
---
source: src/search/search_executor/mod.rs
description: "This should match this Lecture hall and not the HS 1, just because both are in the Bolzmanstr. *3* 4 is the best case."
expression: actual
info: "'MI HS3' should get '5606.EG.011' in 1 results # This should match this Lecture hall and not the HS 1, just because both are in the Bolzmanstr. *3* 4 is the best case."
---
- facet: sites_buildings
  entries:
    - id: mi
      type: joined_building
      name: "Fakultät Mathematik & Informatik (FMI oder \u0019MI\u0017)"
      subtext: Gebäudekomplex
    - id: "5605"
      type: building
      name: Finger 05 (BT05)
      subtext: Gebäudeteil
    - id: "5606"
      type: building
      name: Finger 06 (BT06)
      subtext: Gebäudeteil
    - id: "5607"
      type: building
      name: Finger 07 (BT07)
      subtext: Gebäudeteil
    - id: "5609"
      type: building
      name: Finger 09 (BT09)
      subtext: Gebäudeteil
  n_visible: 5
  estimatedTotalHits: 14
- facet: rooms
  entries:
    - id: 5606.EG.011
      type: room
      name: "5606.EG.011 (\u0019MI\u0017 \u0019Hörsaal\u0017 \u00193\u0017)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.011@5606
    - id: 5602.EG.001
      type: room
      name: "5602.EG.001 (\u0019MI\u0017 \u0019HS\u0017 1,  Friedrich L. Bauer \u0019Hörsaal\u0017)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.02.001@5602
    - id: 5604.EG.011
      type: room
      name: "5604.EG.011 (\u0019MI\u0017 \u0019Hörsaal\u0017 2)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.04.011@5604
    - id: 5602.EG.002
      type: room
      name: "5602.EG.002 (\u0019MI\u0017 \u0019Hörsaal\u0017 Regieraum)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.02.002@5602
    - id: 5602.U1.001
      type: room
      name: 5602.U1.001 (Technikraum)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: "-1.02.001@5602"
  n_visible: 5
  estimatedTotalHits: 1000
