server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__bad_queries-9.snap
---
source: src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'CH22209' should get '5402.01.220J' in 1 results"
---
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
