server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-10.snap
---
source: src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'ZIEL' should get 'wzw-ziel' in 1 results"
---
- facet: sites_buildings
  entries:
    - id: wzw-ziel
      type: area
      name: "\u0019ZIEL\u0017 – Institute for Food & Health"
      subtext: Gebiet / Gruppe von Gebäuden
    - id: "4224"
      type: building
      name: "\u0019ZIEL\u0017 IV - Biowissenschaften"
      subtext: Gebäude
    - id: "4124"
      type: building
      name: "\u0019ZIEL\u0017 II – Molekulare Biowissenschaften"
      subtext: Gebäude
    - id: "4126"
      type: building
      name: "\u0019ZIEL\u0017 I – Zentralinstitut für Ernährungs- und Lebensmittelforschung, Geschäftsstelle und Akademie"
      subtext: Gebäude
  n_visible: 4
  estimatedTotalHits: 3
- facet: rooms
  entries:
    - id: 4124.U1.104
      type: room
      name: 4124.U1.104 (Seminarraum 23 /Übungsraum (WZWS23))
      subtext: "weihenstephan, ZIEL II – Molekulare Biowissenschaften"
      subtext_bold: U/1.04@4124
    - id: 4126.01.609B
      type: room
      name: 4126.01.609B (Seminarraum 14 (WZWS14))
      subtext: "weihenstephan, ZIEL I – Zentralinstitut für Ernährungs- und Lebensmittelforschung, Geschäftsstelle und Akademie"
      subtext_bold: O.09 a/b@4126
    - id: 4126.U1.610B
      type: room
      name: 4126.U1.610B (Seminarraum (gem. Nutzung 1124302030;11243)
      subtext: "weihenstephan, ZIEL I – Zentralinstitut für Ernährungs- und Lebensmittelforschung, Geschäftsstelle und Akademie"
      subtext_bold: U 10/2@4126
    - id: 4224.01.148
      type: room
      name: 4224.01.148 (Seminarraum 51 (WZWS51))
      subtext: "weihenstephan, ZIEL IV - Biowissenschaften"
      subtext_bold: 1.48@4224
    - id: 4224.02.234
      type: room
      name: 4224.02.234 (Seminarraum 52 (WZWS52) (gem. Nutzung))
      subtext: "weihenstephan, ZIEL IV - Biowissenschaften"
      subtext_bold: 2.34@4224
    - id: 4224.02.298
      type: room
      name: 4224.02.298 (Seminarraum 53 (WZWS53))
      subtext: "weihenstephan, ZIEL IV - Biowissenschaften"
      subtext_bold: 2.98@4224
  n_visible: 6
  estimatedTotalHits: 708
